# backend_journey

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  api.py  cli.py  desktop.py  docker-compose.yml  lesson.py  main.py  note_backend.txt  pyproject.toml  readme.md  requirements.txt  storage.py  tasks.example.json  tasks.json  tasks.py  user_data.json  web.py
.github/workflows/: ci.yml  tests.yml
app/: main.py
app/core/: paths.py
app/routers/: tasks.py
app/schemas/: tasks.py
app/services/: task_service.py
app/static/: app.js  style.css
app/storage/: database.py
app/templates/: index.html
lessons/: lesson_json_storage.py
scripts/: build_desktop.bat
tests/: test_api.py  test_paths.py  test_storage.py  test_task_service.py  test_tasks.py  test_web.py
