[project]
name = "task-tracker"
version = "0.1.0"
description = "Task Tracker with FastAPI, CLI, Desktop and Docker support"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
